--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -3,16 +3,36 @@
 
   <head>
 
+    <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description"
+        content="Procedimentos para o embelezamento do olhar e lábios! Nanopigmentação, Nanoblanding e Design!">
+    <meta name="keywords"
+        content="Micropgmentação, Nanopigmentação, Nanoblanding, Design de sobrancelhas, Pump Lips, lábios, cílios, olhar, estética, Design com henna, Brow lamination, Águas Claras, DF, Brasília, ">
+    <meta name="author" content="Diego Casagrande">
+    <meta name="url" content="http://www.lisbeauty.com.br">
+    <meta name="robots" content="index,follow" />
+    <meta name="copyright" content="Lis Beauty">
+     <!--  Essential META Tags -->
+    <meta property="og:title" content="Lis Beauty, mais beleza para suas Sobrancelhas e Lábios!">
+    <meta property="og:description"
+        content="Lis Beauty, mais beleza para suas Sobrancelhas e Lábios!">
+    <meta property="og:image" content="https://www.lisbeauty.com.br/assets/images/LisHigh.png">
+    <meta property="og:url" content="https://www.lisbeauty.com.br">
+    <meta name="twitter:card" content="https://www.lisbeauty.com.br/assets/images/LisHigh.png">
+    <meta property="og:site_name" content="Lis Beauty">
+    <meta name="og:email" content="liss.fernandes2@gmail.com" />
+    <meta name="og:phone_number" content="(61)98202-8857" />
+
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet"> -->
 
     <title>Lis Beauty - Mais beleza para suas Sobrancelhas e Lábios</title>
+    <link rel="icon" href="assets/images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/images/LisHigh.png" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
