--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -66,10 +66,10 @@
                               <ul class="sub-menu">
                                   <li><a href="about-us.html">Lábios</a></li>
                                   <li><a href="our-services.html">Sobrancelhas</a></li>
-                                  <li><a href="contact-us.html">Cílios</a></li>
-                                  <li><a href="contact-us.html">Pump Lips</a></li>
-                                  <li><a href="contact-us.html">Design de sobrancelhas</a></li>
-                                  <li><a href="contact-us.html">Design de sobrancelhas</a></li>
+                                  <li><a href="#contact-section">Cílios</a></li>
+                                  <li><a href="#contact-section">Pump Lips</a></li>
+                                  <li><a href="#contact-section">Design de sobrancelhas</a></li>
+                                  <li><a href="#contact-section">Design de sobrancelhas</a></li>
                               </ul>
                           </li> -->
                           <li class="scroll-to-section"><a href="#testimonials">Depoimentos</a></li> 
@@ -95,7 +95,7 @@
             <h6>Lis Beauty agradece sua visita!</h6>
             <h2>Mais beleza para suas sobrancelhas e <em>lábios!</em></h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="#contact-section">Ganhe agora 20% de desconto!</a></div>
+              <div class="scroll-to-section"><a href="#contact-send">Ganhe agora 20% de desconto!</a></div>
             </div>
           </div>
         </div>
@@ -163,133 +163,122 @@
             <p>Visite nosso <a href="https://www.instagram.com/lisfernandes.beauty/">instragram</a> para saber de todas as atualizações e ficar por dentro das promoções.</p>
           </div>
         </div>
-        <div class="col-lg-12">
-          <div class="naccs">
-            <div class="tabs">
-              <div class="row">
-                <div class="col-lg-3">
-                  <div class="menu">
-                    <div class="active gradient-border"><span>Nanoblanding Sobrancelhas</span></div>
-                    <div class="gradient-border"><span>Brow Lamination</span></div>
-                    <div class="gradient-border"><span>Nano Labial</span></div>
-                    <div class="gradient-border"><span>Pump Lips</span></div>
-                    <div class="gradient-border"><span>Lash Lifting</span></div>
-                    <div class="gradient-border"><span>Design Sobrancelhas</span></div>
-                  </div>
-                </div>
-                <div class="col-lg-9">
-                  <ul class="nacc">
-                    <li class="active">
-                      <div>
-                        <div class="left-image">
-                          <img style="max-width: 300px;" src="assets/images/nano_site.png" alt="Nanopigmentação de sobrancelhas">
-                        </div>
-                        <div class="right-content">
-                          <h4>Nanoblanding Sobrancelhas</h4>
-                          <p>Técnica que faz a sobrancelha ficar com aspecto natural e simula fios reais. Feita manualmente fio a fio, trazendo realismo e naturalidade para a sobrancelha. 
-                          <br><br>É uma evolução da microblanding, trazendo um resultado muito real, simula perfeitamente o fio real da cliente, mantendo a cor, textura e desenho. 
-                          <br><br> 
-                         </p>
-                          <span class="last-span">Faça seu orçamento hoje mesmo!</span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Ir para os contatos</a>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img style="max-width: 300px;" src="assets/images/brow_site.png" alt="Brow lamination">
-                        </div>
-                        <div class="right-content">
-                          <h4>Brow Lamination</h4>
-                          <p>Conhecida como sobrancelhas laminadas ou selvagens, a brow lamination traz um design que deixa o resultado muito natural. 
-                            <br><br>A técnica consiste em pentear os fios quase verticalmente e alisá-los com uma tinta semipermanente. Destaca-se a beleza natural sem utilizar micropigmentação.
-                          </p>
-                          <span class="last-span">Faça seu orçamento hoje mesmo!</span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Ir para os contatos</a>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img style="max-width: 300px;" src="assets/images/labial_site.png" alt="Nano pigmentação labial">
-                        </div>
-                        <div class="right-content">
-                          <h4>Nanopigmentação Labial</h4>
-                          <p>É a evolução da micropigmentação lábial, um procedimento que busca a naturalidade, realçando a cor dos lábios, traz a sensação de volume e o efeito de borda infinita. 
-                            <br>Tem a função de realçar a beleza natural dos lábios, revitalizar, corrigir pequenas imperfeições e harmonizar a cor.
-                            Tenha lábios perfeitos e rejuvenecidos.
 
-                          </p>
-                          <span class="last-span">Faça seu orçamento hoje mesmo!</span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Ir para os contatos</a>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img style="max-width: 300px;" src="assets/images/pump.png" alt="Pump lips">
-                        </div>
-                        <div class="right-content">
-                          <h4>Pump Lips</h4>
-                          <p>É um tratamento com a finalidade de revitalizar os lábios. 
-                            <br>Recupera o aspecto natural, saudável e remove as ruguinhas indesejadas. 
-                            <br><br>É realizada uma esfoliação profunda para a retirada da pele ressecada e a aplicação de um ativo revitalizante com um blend de vitaminas.</p>
-                          <span class="last-span">Faça seu orçamento hoje mesmo!</span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Ir para os contatos</a>
-                          </div>
-                        </div>
-                      </div>
-                      </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img style="max-width: 300px;" src="assets/images/lash.png" alt="Lash lifting">
-                        </div>
-                        <div class="right-content">
-                          <h4>Lash lifting</h4>
-                          <p>O Lash Lifting é a evolução do permanente de cílios. 
-                            <br>Essa técnica trata, curva, colore e alonga os cílios naturais, deixando com aspecto de estar com máscara (rímel)</p>
-                          <span class="last-span">Faça seu orçamento hoje mesmo!</span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Ir para os contatos</a>
-                          </div>
-                        </div>
-                      </div>
-                      </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img style="max-width: 300px;" src="assets/images/design.png"  alt="Design de sobrancelhas">
-                        </div>
-                        <div class="right-content">
-                          <h4>Design de Sobrancelhas</h4>
-                          <p>O design de sobrancelha personalizado visa o resultado ideal para cada rosto, levando em consideração o formato, proporção e simetria para encontrar o desenho que é o mais adequado para cada pessoa. 
-                          </p>
-                          <span class="last-span">Faça seu orçamento hoje mesmo!</span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Ir para os contatos</a>
-                          </div>
-                        </div>
-                      </div>
-                      </li>
-                    </ul>
-                </div>
-              </div>
+        <div class="row">
+          <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
+            <h2>Nanoblanding Sobrancelhas</h2>
+            <br>
+            <p>Técnica que faz a sobrancelha ficar com aspecto natural e simula fios reais. Feita manualmente fio a fio, trazendo realismo e naturalidade para a sobrancelha. 
+            <br><br>É uma evolução da microblanding, trazendo um resultado muito real, simula perfeitamente o fio real da cliente, mantendo a cor, textura e desenho. 
+            <br><br> 
+           </p>
+            <span class="last-span">Faça seu orçamento hoje mesmo!</span>
+            <div class="text-button">
+              <a href="#contact-section">Ir para os contatos</a>
+              <br><br>
             </div>
           </div>
+          <div class="col-lg-4">
+            <img style="max-width: 300px;" src="assets/images/nano_site.png" alt="Nanopigmentação de sobrancelhas">
+          </div>          
         </div>
+
+        <div class="row">
+            <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
+              <h2>Brow Lamination</h2>
+              <br>
+              <p>Conhecida como sobrancelhas laminadas ou selvagens, a brow lamination traz um design que deixa o resultado muito natural. 
+                <br><br>A técnica consiste em pentear os fios quase verticalmente e alisá-los com uma tinta semipermanente. Destaca-se a beleza natural sem utilizar micropigmentação.
+              </p>
+              <br><br>
+              <span class="last-span">Faça seu orçamento hoje mesmo!</span>
+              <div class="text-button">
+                <a href="#contact-section">Ir para os contatos</a>
+                <br><br>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img style="max-width: 300px;" src="assets/images/brow_site.png" alt="Brow lamination">
+            </div>            
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
+              <h2>Nanopigmentação Labial</h2>
+              <br>
+              <p>É a evolução da micropigmentação lábial, um procedimento que busca a naturalidade, realçando a cor dos lábios, traz a sensação de volume e o efeito de borda infinita. 
+                <br>Tem a função de realçar a beleza natural dos lábios, revitalizar, corrigir pequenas imperfeições e harmonizar a cor.
+                Tenha lábios perfeitos e rejuvene  
+              </p>
+              <br><br>
+              <span class="last-span">Faça seu orçamento hoje mesmo!</span>
+              <div class="text-button">
+                <a href="#contact-section">Ir para os contatos</a>
+                <br><br>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img style="max-width: 300px;" src="assets/images/labial_site.png" alt="Nano pigmentação labial">
+            </div>            
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
+              <h2>Pump Lips</h2>
+              <br>
+              <p>É um tratamento com a finalidade de revitalizar os lábios. 
+                <br>Recupera o aspecto natural, saudável e remove as ruguinhas indesejadas. 
+                <br><br>É realizada uma esfoliação profunda para a retirada da pele ressecada e a aplicação de um ativo revitalizante com um blend de vitaminas.</p>
+              <br><br>
+                <span class="last-span">Faça seu orçamento hoje mesmo!</span>
+              <div class="text-button">
+                <a href="#contact-section">Ir para os contatos</a>
+                <br><br>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img style="max-width: 300px;" src="assets/images/pump.png" alt="Pump lips">
+            </div>            
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
+              <h2>Lash lifting</h2>
+              <br>
+              <p>O Lash Lifting é a evolução do permanente de cílios. 
+                <br>Essa técnica trata, curva, colore e alonga os cílios naturais, deixando com aspecto de estar com máscara (rímel)</p>
+              <br><br>
+                <span class="last-span">Faça seu orçamento hoje mesmo!</span>
+              <div class="text-button">
+                <a href="#contact-section">Ir para os contatos</a>
+                <br><br>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img style="max-width: 300px;" src="assets/images/lash.png" alt="Lash lifting">
+            </div>            
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
+              <h2>Design de Sobrancelhas</h2>
+              <br>
+              <p>O design de sobrancelha personalizado visa o resultado ideal para cada rosto, levando em consideração o formato, proporção e simetria para encontrar o desenho que é o mais adequado para cada pessoa. 
+              </p>
+              <br><br>
+              <span class="last-span">Faça seu orçamento hoje mesmo!</span>
+              <div class="text-button">
+                <a href="#contact-section">Ir para os contatos</a>
+                <br><br>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img style="max-width: 300px;" src="assets/images/design.png"  alt="Design de sobrancelhas">
+            </div>            
+          </div>
       </div>
     </div>
+
   </section>
 
   <section class="simple-cta">
@@ -416,7 +405,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+
+        <div id="contact-send" class="col-lg-6">
           
           <form  style="min-height: 100%;" id="contact" action="/contact" method="post">
             <div class="row">
