Marcação LD google

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -25,6 +25,27 @@
     <meta name="og:email" content="liss.fernandes2@gmail.com" />
     <meta name="og:phone_number" content="(61)98202-8857" />
 
+    <!-- Marcação JSON-LD gerada pelo Assistente de marcação para dados estruturados do Google. -->
+    <script type="application/ld+json">
+      {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "Lis Beauty",
+        "image" : [ "https://lisbeauty.com.br/assets/images/headerDu.png", "https://lisbeauty.com.br/assets/images/LisHigh.png" ],
+        "aggregateRating" : {
+          "@type" : "AggregateRating",
+          "bestRating" : "“A super estilosa Lis faz a gente se sentir muito bem com técnicas super atualizadas. ”"
+        },
+        "review" : {
+          "@type" : "Review",
+          "author" : {
+            "@type" : "Person",
+            "name" : "“O Pump lips me deixou super empolgado, meu lábios ficaram lindos e pareciam 10 anos mais novos.”"
+          }
+        }
+      }
+      </script>
+
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet"> -->
 
     <title>Lis Beauty - Mais beleza para suas Sobrancelhas e Lábios</title>
