--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -467,6 +467,21 @@
     </div>
   </section>
 
+
+      <!-- Footer -->
+    <footer>
+      <div>
+          <a href="https://wa.me/5561982028857?text=Mensagem%20para%20a%20Lis" class="whatsApp-btn"
+              target="blank">
+              <strong><i class="fa fa-lg fa-whatsapp"></i></strong>
+         </a>
+          <a href="https://www.instagram.com/lisfernandes.beauty/" class="insta-btn"
+              target="blank">
+              <strong><i class="fa fa-lg fa-instagram"></i></strong>
+         </a>
+      </div>
+    </footer>
+
   <!-- Scripts -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-P99VWS10GY"></script>
