--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Procedimentos para o embelezamento do olhar e lábios! Nanopigmentação, Nanoblanding e Design!">
     <meta name="keywords"
-        content="Micropgmentação, Nanopigmentação, Nanoblanding, Design de sobrancelhas, Pump Lips, lábios, cílios, olhar, estética, Design com henna, Brow lamination, Águas Claras, DF, Brasília, ">
+        content="Micropigmentação, Nanopigmentação, Nanoblanding, Design de sobrancelhas, Pump Lips, lábios, cílios, olhar, estética, Design com henna, Brow lamination, Águas Claras, DF, Brasília, ">
     <meta name="author" content="Diego Casagrande">
     <meta name="url" content="http://www.lisbeauty.com.br">
     <meta name="robots" content="index,follow" />
@@ -147,7 +147,7 @@
                   <img src="assets/images/highlight_sobrancelha.png" alt="">
                 </div>
                 <h4 style="text-align: center;">Sobrancelha</h4>
-                <p>Design com rena e tintura, Nanopigmentação de Sobrançelhas (evolução da micropigmentação) e Brow Lamination.</p>
+                <p>Design com henna e tintura, Nanopigmentação de Sobrançelhas (evolução da micropigmentação) e Brow Lamination.</p>
               </div>
             </div>
             <div class="item">
@@ -190,7 +190,7 @@
             <h2>Nanoblanding Sobrancelhas</h2>
             <br>
             <p>Técnica que faz a sobrancelha ficar com aspecto natural e simula fios reais. Feita manualmente fio a fio, trazendo realismo e naturalidade para a sobrancelha. 
-            <br><br>É uma evolução da microblanding, trazendo um resultado muito real, simula perfeitamente o fio real da cliente, mantendo a cor, textura e desenho. 
+            <br><br>É uma evolução da micropigmentação, trazendo um resultado muito real, simula perfeitamente o fio real da cliente, mantendo a cor, textura e desenho. 
             <br><br> 
            </p>
             <span class="last-span">Faça seu orçamento hoje mesmo!</span>
@@ -229,7 +229,7 @@
               <br>
               <p>É a evolução da micropigmentação lábial, um procedimento que busca a naturalidade, realçando a cor dos lábios, traz a sensação de volume e o efeito de borda infinita. 
                 <br>Tem a função de realçar a beleza natural dos lábios, revitalizar, corrigir pequenas imperfeições e harmonizar a cor.
-                Tenha lábios perfeitos e rejuvene  
+                Tenha lábios perfeitos e rejuvenecidos.  
               </p>
               <br><br>
               <span class="last-span">Faça seu orçamento hoje mesmo!</span>
@@ -249,7 +249,7 @@
               <br>
               <p>É um tratamento com a finalidade de revitalizar os lábios. 
                 <br>Recupera o aspecto natural, saudável e remove as ruguinhas indesejadas. 
-                <br><br>É realizada uma esfoliação profunda para a retirada da pele ressecada e a aplicação de um ativo revitalizante com um blend de vitaminas.</p>
+                <br><br>É realizada uma esfoliação profunda para a retirada da pele ressecada, aplicação de ácido hialurônico e um blend de vitaminas.</p>
               <br><br>
                 <span class="last-span">Faça seu orçamento hoje mesmo!</span>
               <div class="text-button">
@@ -294,7 +294,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <img style="max-width: 300px;" src="assets/images/design.png"  alt="Design de sobrancelhas">
+              <img style="max-width: 300px;" src="assets/images/design3.png"  alt="Design de sobrancelhas">
             </div>            
           </div>
       </div>
