vercel no cache

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -429,7 +429,7 @@
 
         <div id="contact-send" class="col-lg-6">
           
-          <form  style="min-height: 100%;" id="contact" action="/contact" method="post">
+          <form  style="min-height: 100%;" id="contact" action="/contact?_vercel_no_cache=1" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
