--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="Procedimentos para o embelezamento do olhar e lábios! Nanopigmentação, Nanoblanding e Design!">
+    content="Procedimentos para o embelezamento do olhar e lábios! Nanopigmentação, Nanoblading e Design!">
   <meta name="keywords"
-    content="Micropigmentação, Nanopigmentação, Nanoblanding, Design de sobrancelhas, Pump Lips, lábios, cílios, olhar, estética, Design com henna, Brow lamination, Águas Claras, DF, Brasília, ">
+    content="Micropigmentação, Nanopigmentação, Nanoblading, Design de sobrancelhas, Pump Lips, lábios, cílios, olhar, estética, Design com henna, Brow lamination, Águas Claras, DF, Brasília, ">
   <meta name="author" content="Diego Casagrande">
   <meta name="url" content="http://www.lisbeauty.com.br">
   <meta name="robots" content="index,follow" />
@@ -194,7 +194,7 @@
 
         <div class="row">
           <div class="col-lg-8" style="margin-top: 50px; text-align: center; align-self: center;">
-            <h2>Nanoblanding Sobrancelhas</h2>
+            <h2>Nanoblading Sobrancelhas</h2>
             <br>
             <p>Técnica que faz a sobrancelha ficar com aspecto natural e simula fios reais. Feita manualmente fio a fio,
               trazendo realismo e naturalidade para a sobrancelha.
