--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -37,14 +37,22 @@
         "https://lisbeauty.com.br/assets/images/LisHigh.png"
       ],
       "aggregateRating": {
-        "@type": "AggregateRating",
         "bestRating": "“A super estilosa Lis faz a gente se sentir muito bem com técnicas super atualizadas. ”"
-      },
-      "review": {
+        "@type": "AggregateRating",
+        "ratingValue": "100",
+        "bestRating": "100",
+        "ratingCount": "20"
+      }
+      "review": 
+      {
         "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        },
         "author": {
           "@type": "Person",
-          "name": "“O Pump lips me deixou super empolgado, meu lábios ficaram lindos e pareciam 10 anos mais novos.”"
+          "name": "John Doe"
         }
       }
     }
